# kivy_background_animation

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
examples/: snow.py  snow_d.py  snow_debug.py  vertical.py  vertical_debug.py  vertical_dynamically_changing_properties.py
kivy_background_animation/: _impl.py  kv_compatible_eventdispatcher.py  snow.py  vertical.py
kivy_background_animation/predefined/: snow.py  vertical.py
