[tool.poetry]
name = "kivy_background_animation"
version = "0.1.0.dev0"
description = "simple background animations for Kivy"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/gottadiveintopython/kivy_background_animation'
homepage = 'https://github.com/gottadiveintopython/kivy_background_animation'
keywords = ['kivy']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.7"
asynckivy = "^0.5"
kivy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
